<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_track"
        android:icon="@drawable/ic_action_location"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_action_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_action_dashboard"
        android:title="@string/title_information" />

    <item
        android:id="@+id/navigation_report"
        android:icon="@drawable/ic_action_report"
        android:title="@string/title_report" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/title_settings" />


</menu>
