<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_track">

    <fragment
        android:id="@+id/navigation_track"
        android:name="com.example.minibus.ui.track.TrackFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_track" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.minibus.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.minibus.ui.information.InformationFragment"
        android:label="@string/title_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/navigation_report"
        android:name="com.example.minibus.ui.report.ReportFragment"
        android:label="@string/title_report"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.minibus.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings"/>

</navigation>